Adds Personalized Feeds for users.
